# CUDA-SPADE

./: .gitignore  CMakeLists.txt  README.md  config.yaml  monitor.py  plc_sim.py  requirements.txt
benchmarks/: benchmark.py
python/: CMakeLists.txt  generate_data.py  plot_spectrum.py  spade_bindings.cpp
spade/: __init__.py  alerts.py  engine.py  sensor_sim.py
spade/readers/: __init__.py  modbus_reader.py
src/: CMakeLists.txt  spade.cu  spade.h
tests/: CMakeLists.txt  test_hello_gpu.cu
